# swastikbounty

./: DEPLOYMENT-GUIDE.md  DEPLOYMENT.md  FIREBASE-DEPLOY.md  QUICK-START-MOCK.md  QUICKSTART.md  README.md  TROUBLESHOOTING.md  build-and-deploy.ps1  demo.html  deploy-firebase.bat  deploy-program.bat  firebase.json  fix-and-install.bat  start-app.bat
functions/: index.js  package.json
main/backend/: package-lock.json  package.json  render.yaml  server.js
main/backend/node_modules1/: .package-lock.json
main/frontend/: .cspellrc.json  next.config.mjs  package-lock.json  package.json
main/frontend/src/app/: globals.css  layout.tsx  page.tsx
main/frontend/src/app/api/_helpers/: storage.ts
main/frontend/src/app/api/certificate/issue/: route.ts
main/frontend/src/app/api/certificate/revoke/: route.ts
main/frontend/src/app/api/certificate/verify/[address]/: route.ts
main/frontend/src/app/api/certificates/: route.ts
main/frontend/src/app/api/health/: route.ts
main/frontend/src/components/: IssueCertificate.tsx  RevokeCertificate.tsx  VerifyCertificate.tsx  WalletContextProvider.tsx
main/frontend/src/lib/: constants.ts
solana-program/: .gitignore  Cargo.toml
solana-program/src/: lib.rs
